// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Radio can be checked 1`] = `
<div
  className="mdc-radio"
>
  <input
    className="mdc-radio__native-control"
    defaultChecked="checked"
    id="fixed-id"
    name={null}
    type="radio"
  />
  <div
    className="mdc-radio__background"
  >
    <div
      className="mdc-radio__outer-circle"
    />
    <div
      className="mdc-radio__inner-circle"
    />
  </div>
</div>
`;

exports[`components/Radio can be disabled 1`] = `
<div
  className="mdc-radio"
>
  <input
    className="mdc-radio__native-control"
    disabled="disabled"
    id="fixed-id"
    name={null}
    type="radio"
  />
  <div
    className="mdc-radio__background"
  >
    <div
      className="mdc-radio__outer-circle"
    />
    <div
      className="mdc-radio__inner-circle"
    />
  </div>
</div>
`;

exports[`components/Radio can have a label 1`] = `
<div
  className="mdc-form-field"
>
  <div
    className="mdc-radio"
  >
    <input
      className="mdc-radio__native-control"
      id="fixed-id"
      name={null}
      type="radio"
    />
    <div
      className="mdc-radio__background"
    >
      <div
        className="mdc-radio__outer-circle"
      />
      <div
        className="mdc-radio__inner-circle"
      />
    </div>
  </div>
  <label
    htmlFor="fixed-id"
  >
    foo
  </label>
</div>
`;

exports[`components/Radio can have a name 1`] = `
<div
  className="mdc-radio"
>
  <input
    className="mdc-radio__native-control"
    id="fixed-id"
    name="bar"
    type="radio"
  />
  <div
    className="mdc-radio__background"
  >
    <div
      className="mdc-radio__outer-circle"
    />
    <div
      className="mdc-radio__inner-circle"
    />
  </div>
</div>
`;
